corrections to references

--- a/mdesapp_formulae.html
+++ b/mdesapp_formulae.html
@@ -419,8 +419,8 @@ summary {
 <li><p>calculate the difference between the estimated variance in a multilevel model with the baseline covariate and another one without it (empty model);</p></li>
 <li><p>divide the difference by the estimated variance in the empty multilevel model.</p></li>
 </ol>
-<p>This needs to be separately for the individual and the cluster level variance.</p>
-<p>For further details, see for example: Hox, J. (2010, p71)<a href="#fn3" class="footnote-ref" id="fnref3"><sup>3</sup></a></p>
+<p>This needs to be done separately for the individual and the cluster level variance.</p>
+<p>For further details, see for example: Hox et al. (2017, p59)<a href="#fn3" class="footnote-ref" id="fnref3"><sup>3</sup></a></p>
 <hr />
 <div id="references" class="section level2">
 <h2>References:</h2>
@@ -429,9 +429,9 @@ summary {
 <div class="footnotes">
 <hr />
 <ol>
-<li id="fn1"><p>Bloom, H., Richburg-Hayes, L. and Black, A.R. (2007) Using Covariates to Improve Precision for Studies that Randomise Schools to Evaluate Educational Interventions. Educational Evaluation and Policy Analysis, 29, No.1, pp.30-59.<a href="#fnref1" class="footnote-back">↩</a></p></li>
-<li id="fn2"><p>Education Endowment Foundation. (2013). Pre-testing in EEF evaluations. London. Available at: <a href="https://educationendowmentfoundation.org.uk/public/files/Social_and_Emotional_Learning_Evidence_Review.pdf" class="uri">https://educationendowmentfoundation.org.uk/public/files/Social_and_Emotional_Learning_Evidence_Review.pdf</a><a href="#fnref2" class="footnote-back">↩</a></p></li>
-<li id="fn3"><p>Hox, J. (2010). Multilevel Analysis.Techniques and Applications. Routledge. New York and Hove.<a href="#fnref3" class="footnote-back">↩</a></p></li>
+<li id="fn1"><p>Bloom, H., Richburg-Hayes, L. and Black, A.R. (2007) Using Covariates to Improve Precision for Studies that Randomise Schools to Evaluate Educational Interventions. Educational Evaluation and Policy Analysis, 29, No.1, pp.30-59.<a href="#fnref1" class="footnote-back">↩︎</a></p></li>
+<li id="fn2"><p>Education Endowment Foundation. (2013). Pre-testing in EEF evaluations. London. Available at: <a href="https://educationendowmentfoundation.org.uk/public/files/Evaluation/Writing_a_Protocol_or_SAP/Pre-testing_paper.pdf" class="uri">https://educationendowmentfoundation.org.uk/public/files/Evaluation/Writing_a_Protocol_or_SAP/Pre-testing_paper.pdf</a><a href="#fnref2" class="footnote-back">↩︎</a></p></li>
+<li id="fn3"><p>Hox, J., Moerbeek, M., van de Schoot, R. (2017). Multilevel Analysis: Techniques and Applications (3rd Ed). Routledge. New York and Hove.<a href="#fnref3" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
 
